@@ -325,6 +325,12 @@ name|_root
 init|=
 literal|"*"
 decl_stmt|;
+specifier|private
+name|boolean
+name|_excludeRoot
+init|=
+literal|false
+decl_stmt|;
 specifier|public
 name|void
 name|addFileset
@@ -381,6 +387,28 @@ name|root
 parameter_list|)
 block|{
 name|_root
+operator|=
+name|root
+expr_stmt|;
+block|}
+specifier|public
+name|boolean
+name|isExcludeRoot
+parameter_list|()
+block|{
+return|return
+name|_excludeRoot
+return|;
+block|}
+specifier|public
+name|void
+name|setExcludeRoot
+parameter_list|(
+name|boolean
+name|root
+parameter_list|)
+block|{
+name|_excludeRoot
 operator|=
 name|root
 expr_stmt|;
@@ -1024,6 +1052,38 @@ argument_list|,
 name|moduleIdMap
 argument_list|)
 expr_stmt|;
+comment|// With the excluderoot attribute set to true, take the rootmd out of the toKeep set.
+if|if
+condition|(
+name|_excludeRoot
+condition|)
+block|{
+name|Message
+operator|.
+name|verbose
+argument_list|(
+literal|"Excluded module "
+operator|+
+name|rootmd
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getModuleId
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|toKeep
+operator|.
+name|remove
+argument_list|(
+name|rootmd
+argument_list|)
+expr_stmt|;
+block|}
 comment|// just for logging
 for|for
 control|(
