@@ -667,6 +667,169 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+specifier|public
+name|void
+name|testFilteredExcludeRootBuildList
+parameter_list|()
+block|{
+name|Project
+name|p
+init|=
+operator|new
+name|Project
+argument_list|()
+decl_stmt|;
+name|IvyBuildList
+name|buildlist
+init|=
+operator|new
+name|IvyBuildList
+argument_list|()
+decl_stmt|;
+name|buildlist
+operator|.
+name|setProject
+argument_list|(
+name|p
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|setRoot
+argument_list|(
+literal|"C"
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|setExcludeRoot
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|FileSet
+name|fs
+init|=
+operator|new
+name|FileSet
+argument_list|()
+decl_stmt|;
+name|fs
+operator|.
+name|setDir
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/buildlist"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|setIncludes
+argument_list|(
+literal|"**/build.xml"
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|addFileset
+argument_list|(
+name|fs
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|setReference
+argument_list|(
+literal|"ordered.build.files"
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|Object
+name|o
+init|=
+name|p
+operator|.
+name|getReference
+argument_list|(
+literal|"ordered.build.files"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|o
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|o
+operator|instanceof
+name|Path
+argument_list|)
+expr_stmt|;
+name|Path
+name|path
+init|=
+operator|(
+name|Path
+operator|)
+name|o
+decl_stmt|;
+name|String
+index|[]
+name|files
+init|=
+name|path
+operator|.
+name|list
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|files
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|files
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+comment|// A and C should be filtered out
+name|assertEquals
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/buildlist/B/build.xml"
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|,
+operator|new
+name|File
+argument_list|(
+name|files
+index|[
+literal|0
+index|]
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
